fixed a small js bug and added more responsive design on mobile

--- a/style.css
+++ b/style.css
@@ -552,6 +552,7 @@ body {
 	grid-template-columns: 1fr 1fr;
 	grid-column-gap: 5px;
 	height: 100%;
+	margin: 10%;
 }
 
 .card-container {
@@ -1056,6 +1057,7 @@ body {
 	}
 	.card {
 		width: 100%;
+		height: 100%;
 	}
 	.project-component {
 		width: 100%;
